--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "express-async-error": "^0.0.2",
     "mongoose": "^7.2.0",
     "morgan": "^1.10.0"
   }
