--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-async-error": "^0.0.2",
+    "joi": "^17.9.2",
     "mongoose": "^7.2.0",
     "morgan": "^1.10.0"
   }
